--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,20 @@
+certifi==2020.12.5
+chardet==4.0.0
 click==7.1.2
+decorator==4.4.2
 Flask==1.1.2
 gunicorn==20.0.4
+idna==2.10
+imageio==2.9.0
+imageio-ffmpeg==0.4.3
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+moviepy==1.0.3
+numpy==1.19.5
+Pillow==8.1.0
+proglog==0.1.9
+requests==2.25.1
+tqdm==4.56.0
+urllib3==1.26.2
 Werkzeug==1.0.1
