--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
+amqp==5.0.5
+billiard==3.6.3.0
+celery==5.0.5
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.1.6
+config==0.5.0.post0
 decorator==4.4.2
+ffmpeg-python==0.2.0
 Flask==1.1.2
+future==0.18.2
 gunicorn==20.0.4
 idna==2.10
 imageio==2.9.0
@@ -10,6 +19,7 @@ imageio-ffmpeg==0.4.3
 itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==1.0.0
+kombu==5.0.2
 MarkupSafe==1.1.1
 moviepy==1.0.3
 nltk==3.5
@@ -17,9 +27,148 @@ numpy==1.19.5
 pexels-api==1.0.1
 Pillow==8.1.0
 proglog==0.1.9
+prompt-toolkit==3.0.14
+pyobjc==7.1
+pyobjc-core==7.1
+pyobjc-framework-Accessibility==7.1
+pyobjc-framework-Accounts==7.1
+pyobjc-framework-AddressBook==7.1
+pyobjc-framework-AdServices==7.1
+pyobjc-framework-AdSupport==7.1
+pyobjc-framework-AppleScriptKit==7.1
+pyobjc-framework-AppleScriptObjC==7.1
+pyobjc-framework-ApplicationServices==7.1
+pyobjc-framework-AppTrackingTransparency==7.1
+pyobjc-framework-AuthenticationServices==7.1
+pyobjc-framework-AutomaticAssessmentConfiguration==7.1
+pyobjc-framework-Automator==7.1
+pyobjc-framework-AVFoundation==7.1
+pyobjc-framework-AVKit==7.1
+pyobjc-framework-BusinessChat==7.1
+pyobjc-framework-CalendarStore==7.1
+pyobjc-framework-CallKit==7.1
+pyobjc-framework-CFNetwork==7.1
+pyobjc-framework-ClassKit==7.1
+pyobjc-framework-CloudKit==7.1
+pyobjc-framework-Cocoa==7.1
+pyobjc-framework-Collaboration==7.1
+pyobjc-framework-ColorSync==7.1
+pyobjc-framework-Contacts==7.1
+pyobjc-framework-ContactsUI==7.1
+pyobjc-framework-CoreAudio==7.1
+pyobjc-framework-CoreAudioKit==7.1
+pyobjc-framework-CoreBluetooth==7.1
+pyobjc-framework-CoreData==7.1
+pyobjc-framework-CoreHaptics==7.1
+pyobjc-framework-CoreLocation==7.1
+pyobjc-framework-CoreMedia==7.1
+pyobjc-framework-CoreMediaIO==7.1
+pyobjc-framework-CoreMIDI==7.1
+pyobjc-framework-CoreML==7.1
+pyobjc-framework-CoreMotion==7.1
+pyobjc-framework-CoreServices==7.1
+pyobjc-framework-CoreSpotlight==7.1
+pyobjc-framework-CoreText==7.1
+pyobjc-framework-CoreWLAN==7.1
+pyobjc-framework-CryptoTokenKit==7.1
+pyobjc-framework-DeviceCheck==7.1
+pyobjc-framework-DictionaryServices==7.1
+pyobjc-framework-DiscRecording==7.1
+pyobjc-framework-DiscRecordingUI==7.1
+pyobjc-framework-DiskArbitration==7.1
+pyobjc-framework-DVDPlayback==7.1
+pyobjc-framework-EventKit==7.1
+pyobjc-framework-ExceptionHandling==7.1
+pyobjc-framework-ExecutionPolicy==7.1
+pyobjc-framework-ExternalAccessory==7.1
+pyobjc-framework-FileProvider==7.1
+pyobjc-framework-FileProviderUI==7.1
+pyobjc-framework-FinderSync==7.1
+pyobjc-framework-FSEvents==7.1
+pyobjc-framework-GameCenter==7.1
+pyobjc-framework-GameController==7.1
+pyobjc-framework-GameKit==7.1
+pyobjc-framework-GameplayKit==7.1
+pyobjc-framework-ImageCaptureCore==7.1
+pyobjc-framework-IMServicePlugIn==7.1
+pyobjc-framework-InputMethodKit==7.1
+pyobjc-framework-InstallerPlugins==7.1
+pyobjc-framework-InstantMessage==7.1
+pyobjc-framework-Intents==7.1
+pyobjc-framework-IOSurface==7.1
+pyobjc-framework-iTunesLibrary==7.1
+pyobjc-framework-KernelManagement==7.1
+pyobjc-framework-LatentSemanticMapping==7.1
+pyobjc-framework-LaunchServices==7.1
+pyobjc-framework-libdispatch==7.1
+pyobjc-framework-LinkPresentation==7.1
+pyobjc-framework-LocalAuthentication==7.1
+pyobjc-framework-MapKit==7.1
+pyobjc-framework-MediaAccessibility==7.1
+pyobjc-framework-MediaLibrary==7.1
+pyobjc-framework-MediaPlayer==7.1
+pyobjc-framework-MediaToolbox==7.1
+pyobjc-framework-Metal==7.1
+pyobjc-framework-MetalKit==7.1
+pyobjc-framework-MetalPerformanceShaders==7.1
+pyobjc-framework-MetalPerformanceShadersGraph==7.1
+pyobjc-framework-MLCompute==7.1
+pyobjc-framework-ModelIO==7.1
+pyobjc-framework-MultipeerConnectivity==7.1
+pyobjc-framework-NaturalLanguage==7.1
+pyobjc-framework-NetFS==7.1
+pyobjc-framework-Network==7.1
+pyobjc-framework-NetworkExtension==7.1
+pyobjc-framework-NotificationCenter==7.1
+pyobjc-framework-OpenDirectory==7.1
+pyobjc-framework-OSAKit==7.1
+pyobjc-framework-OSLog==7.1
+pyobjc-framework-PassKit==7.1
+pyobjc-framework-PencilKit==7.1
+pyobjc-framework-Photos==7.1
+pyobjc-framework-PhotosUI==7.1
+pyobjc-framework-PreferencePanes==7.1
+pyobjc-framework-PushKit==7.1
+pyobjc-framework-Quartz==7.1
+pyobjc-framework-QuickLookThumbnailing==7.1
+pyobjc-framework-ReplayKit==7.1
+pyobjc-framework-SafariServices==7.1
+pyobjc-framework-SceneKit==7.1
+pyobjc-framework-ScreenSaver==7.1
+pyobjc-framework-ScreenTime==7.1
+pyobjc-framework-ScriptingBridge==7.1
+pyobjc-framework-SearchKit==7.1
+pyobjc-framework-Security==7.1
+pyobjc-framework-SecurityFoundation==7.1
+pyobjc-framework-SecurityInterface==7.1
+pyobjc-framework-ServiceManagement==7.1
+pyobjc-framework-Social==7.1
+pyobjc-framework-SoundAnalysis==7.1
+pyobjc-framework-Speech==7.1
+pyobjc-framework-SpriteKit==7.1
+pyobjc-framework-StoreKit==7.1
+pyobjc-framework-SyncServices==7.1
+pyobjc-framework-SystemConfiguration==7.1
+pyobjc-framework-SystemExtensions==7.1
+pyobjc-framework-UniformTypeIdentifiers==7.1
+pyobjc-framework-UserNotifications==7.1
+pyobjc-framework-UserNotificationsUI==7.1
+pyobjc-framework-VideoSubscriberAccount==7.1
+pyobjc-framework-VideoToolbox==7.1
+pyobjc-framework-Virtualization==7.1
+pyobjc-framework-Vision==7.1
+pyobjc-framework-WebKit==7.1
+python-decouple==3.4
+python-dotenv==0.15.0
 pyttsx3==2.90
+pytz==2020.5
+redis==3.5.3
 regex==2020.11.13
 requests==2.25.1
+rq==1.7.0
+six==1.15.0
 tqdm==4.56.0
 urllib3==1.26.2
+vine==5.0.0
+wcwidth==0.2.5
 Werkzeug==1.0.1
