--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 amqp==5.0.5
+bidict==0.21.2
 billiard==3.6.3.0
 celery==5.0.5
 certifi==2020.12.5
@@ -11,6 +12,7 @@ config==0.5.0.post0
 decorator==4.4.2
 ffmpeg-python==0.2.0
 Flask==1.1.2
+Flask-SocketIO==5.0.1
 future==0.18.2
 gunicorn==20.0.4
 idna==2.10
@@ -30,6 +32,8 @@ proglog==0.1.9
 prompt-toolkit==3.0.14
 python-decouple==3.4
 python-dotenv==0.15.0
+python-engineio==4.0.0
+python-socketio==5.0.4
 pyttsx3==2.90
 pytz==2020.5
 redis==3.5.3
